<?xml version="1.0" encoding="utf-8"?>
 <resources>

    <string name="Arrancar">Jugar</string>
    <string name="Configurar">Configurar</string>
    <string name="Acercade">Acerca de </string>
    <string name="Salir">Exit</string>
    <string name="Puntuaciones">Puntuaciones</string>
    <string name="tituloAplicacion">Asteroides</string>
    <string name="hello">Hello World, Asteroides! </string>
    <string name="app_name">Asteroides</string>
    <string name="menu_settings">Settings</string>
    <string name="Configuración">Configuración</string>
    <string name="Preferencias">Preferencias </string>
    <string name="Juego">Juego</string>
</resources>