 <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:padding="30dip"
    tools:context=".Asteroides" >

    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloAplicacion"
        android:gravity="center"
        android:textSize="25sp "
        android:layout_marginBottom="20dip"/>

    <Button android:id="@+id/Button01"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:text="@string/Arrancar"/>

    <Button android:id="@+id/Button02"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:text="@string/Configurar"/>

    <Button android:id="@+id/Button03"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:text="@string/Acercade"/>

    <Button android:id="@+id/Button04"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:text="@string/Salir"/>

</LinearLayout>